syntax = "proto3";

package pb;

option go_package = "github.com/mark3d-xyz/mark3d/authserver-pb";

message UserProfile {
  string avatarURL = 1;
  string bannerURL = 2;
  string bio = 3;
  string name = 4;
  string username = 5;
  string websiteURL = 6;
  string email = 7;
  bool isEmailNotificationEnabled = 8;
  bool isPushNotificationEnabled = 9;
  string twitter = 10;
  string address = 11;
  string discord = 12;
  string telegram = 13;
  bool isEmailConfirmed = 14;
}

message GetUserProfileRequest {
  string identification = 1;
}

message SetEmailRequest {
  string email = 1;
}

message VerifyEmailRequest {
  string secretToken = 1;
}

message VerifyEmailResponse {
  string address = 1;
}

message SetEmailResponse {
  string token = 1;
  string email = 2;
  UserProfile profile = 3;
}

message EmailExistsRequest {
  string email = 1;
}

message EmailExistsResponse {
  bool exist = 1;
}

message NameExistsRequest {
  string name = 1;
}

message NameExistsResponse {
  bool exist = 1;
}

message UsernameExistsRequest {
  string username = 1;
}

message UsernameExistsResponse {
  bool exist = 1;
}
